# circuits-research

./: .gitignore  .gitmodules
arkworks/: Cargo.toml
arkworks/src/: lib.rs
arkworks/src/crh/: mod.rs
arkworks/src/merkle_tree/: mod.rs
circom/: deposit.circom  withdraw.circom
circom/lib/: account.circom  binary_merkle_tree.circom
gnark/: deposit.go  go.mod  go.sum  merkle_tree.go  withdraw.go
gnark/cmd/: main.go
